5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_1328.log
== TEST (2019-04-09 18:38:10) 
-- CODE:
val=5*35
print=(val)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:38:25) 
-- CODE:
val=20*35
print=(val)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:39:46) 
-- CODE:
print=(20 * 35)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:41:19) 
-- CODE:
pessoas=20
val=35
print=(pessoas * val)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:41:55) 
-- CODE:
val 1=20
val 2=35
print=("pessoas * val")
-- ERROR:
File "XXXX", line 1
    val 1=20
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:42:34) 
-- CODE:
val 1=20
val 2=35
print=("val 1 * val 2")
-- ERROR:
File "XXXX", line 1
    val 1=20
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:42:58) 
-- CODE:
print=(20*35)
-- ERROR:
File "XXXX", line 1
    val 1=20
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:44:03) 
-- CODE:
val= 20*35
print=(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print=(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:44:45) 
-- CODE:
print=20*35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print=(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:45:31) 
-- CODE:
print(20*35)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:45:36) 
-- CODE:
print(20*35)
-- EXECUTION TIME:
0.14709
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
